azure/zeebe-lb.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: camunda
  name: zeebe-lb
spec:
  type: LoadBalancer
  ports:
    - port: 26500
      targetPort: 26500
  selector:
    app.kubernetes.io/component: zeebe-gateway
