azure/ingress-azure.tpl.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-azure
  namespace: camunda
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: identity.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-identity
                port:
                  number: 80
    - host: keycloak.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-keycloak
                port:
                  number: 80
    - host: operate.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-operate
                port:
                  number: 80
    - host: tasklist.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: camunda-tasklist
                port:
                  number: 80
